# Hack_NYU

./: .gitignore  DUAL_PROVIDER_SETUP.md  ENVIRONMENT_SETUP.md  FORCE_DECISION_IMPLEMENTATION.md  Frontend-Design-Spec.md  Frontend-Design-Specification-Hackathon.md  INTEGRATION_SUCCESS.md  MESSAGING_BUGS_FIX_SUMMARY.md  PROVIDER_IMPLEMENTATION_SUMMARY.md  PROVIDER_SELECTION_FIX.md  QUICK_START_DUAL_PROVIDERS.md  README.md  SELLER_VISIBILITY_FIX.md  THINKING_TOKENS_FIX_SUMMARY.md  backend_spec.md  conversations.md  environment.yml  full_product_idea.md  inference.py  multi-agent-marketplace-architecture.md  rough_metrics.md  test_integration.py
backend/: OPENROUTER_SETUP.md  OPENROUTER_TESTING.md  PHASE_1_SUMMARY.md  PHASE_1_TESTING_REPORT.md  PHASE_2_SUMMARY.md  PHASE_2_TESTING_REPORT.md  PHASE_3_TESTING_REPORT.md  PHASE_4_BUG_FIX_REPORT.md  PHASE_4_IMPLEMENTATION_SUMMARY.md  PHASE_4_TESTING_REPORT.md  README.md  demo_negotiation.py  env.template  manual_phase2_test.py  migrate_add_provider.py  pyproject.toml  pytest.ini  requirements.txt  run_phase4_tests.ps1  setup_openrouter_test.py  test_offer_clamping.py  test_phase1_manual.py  test_results_mocked.xml  test_results_openrouter_endpoints.xml  test_results_openrouter_perf.xml  test_results_openrouter_streaming.xml  validate_prompts.py
backend/app/: main.py
backend/app/agents/: buyer_agent.py  graph_builder.py  prompts.py  seller_agent.py
backend/app/core/: config.py  database.py  models.py  session_manager.py
backend/app/llm/: __init__.py  lm_studio.py  (+5 more)
backend/tests/: TEST_DOCUMENTATION.md  conftest.py
(+120 files in other folders)
